--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+    width: 5px;
+    cursor:  pointer !important;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #F2F2F2;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #3d3d3d;
+    cursor: pointer; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(68, 68, 68); 
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+   * {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: 1px;  /* Firefox */
+  }
